syntax="proto3";

package vitepb;


message SnapshotBlock {
    bytes hash = 1;
    bytes prevHash = 2;
    uint64 height = 3;
    bytes publicKey = 4;

    bytes signature = 5;

    int64 timestamp = 6;

    uint64 Seed = 7;

    bytes SeedHash = 8;

    bytes snapshotContent = 9;

    uint32 version = 10;
}